--- a/addProductSidebar.html
+++ b/addProductSidebar.html
@@ -257,7 +257,7 @@
 </head>
 
 <body>
-    <h3>Add New Product <span class="version-tag">v1.7.02</span> ✨</h3>
+    <h3>Add/Edit Product <span class="version-tag">v1.8.00</span> ✨</h3>
 
     <!-- Mode Switch -->
     <div style="margin-bottom: 20px; display: flex; gap: 8px; flex-wrap: wrap;">
